edit anh + css 0609

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1476,6 +1476,7 @@ html:has(.lg-start-zoom), body:has(.lg-start-zoom) {
   background: none;
   color: #D59A57;
   padding-left: 0;
+  top: 15px;
 }
 
 .box-see-more a:hover span {
