--- a/assets/scss/_gallery.scss
+++ b/assets/scss/_gallery.scss
@@ -207,6 +207,7 @@ html:has(.lg-start-zoom), body:has(.lg-start-zoom){overflow: hidden;}
     background: none;
     color: #D59A57;
     padding-left: 0;
+    top:15px;
   }
   
   .box-see-more a:hover span {
