--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -1,5 +1,3 @@
-
-
 /*===========================
      01.COMMON css 
 ===========================*/
@@ -7,14 +5,14 @@
 
 @import url('../css/GreatVibes.css');
 
- body {
-	font-family: $font-2;
-	font-weight: normal;
-	font-style: normal;
+body {
+    font-family: $font-2;
+    font-weight: normal;
+    font-style: normal;
     color: $body-color;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     @include box-sizing (border-box);
@@ -22,25 +20,25 @@
 }
 
 img {
-	max-width: 100%;
+    max-width: 100%;
 }
 
 a:focus,
 input:focus,
 textarea:focus,
 button:focus {
-	text-decoration: none;
-	outline: none;
+    text-decoration: none;
+    outline: none;
 }
 
 a:focus,
-a:hover{
-	text-decoration: none;
+a:hover {
+    text-decoration: none;
 }
 
 i,
 span,
-a{
+a {
     display: inline-block;
 }
 
@@ -50,7 +48,7 @@ iframe,
 img,
 svg,
 video {
-  vertical-align: middle;
+    vertical-align: middle;
 }
 
 
@@ -60,46 +58,52 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: $font-1;
-	font-weight: 700;
-	color: $black;
-	margin: 0px;
+    font-family: $font-1;
+    font-weight: 700;
+    color: $black;
+    margin: 0px;
 }
 
 h1 {
-	font-size: 48px;
-}
-h2 {
-	font-size: 36px;
-}
-h3 {
-	font-size: 28px;
-}
-h4 {
-	font-size: 22px;
-}
-h5 {
-	font-size: 18px;
-}
-h6 {
-	font-size: 16px;
+    font-size: 48px;
 }
 
-ul,ol {
-	margin: 0px;
-	padding: 0px;
+h2 {
+    font-size: 36px;
+}
+
+h3 {
+    font-size: 28px;
+}
+
+h4 {
+    font-size: 22px;
+}
+
+h5 {
+    font-size: 18px;
+}
+
+h6 {
+    font-size: 16px;
+}
+
+ul,
+ol {
+    margin: 0px;
+    padding: 0px;
     list-style-type: none;
 }
 
 p {
-	font-size: 16px;
-	font-weight: 400;
-	line-height: 26px;
-	color: $body-color;
-	margin: 0px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    color: $body-color;
+    margin: 0px;
 }
 
-.bg_cover{
+.bg_cover {
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -120,35 +124,36 @@ p {
 /*===== All Button Style =====*/
 
 .main-btn {
-	display: inline-block;
-	font-weight: 500;
-	text-align: center;
-	white-space: nowrap;
-	vertical-align: middle;
-	@include user-select(none);
-	border: 2px solid $theme-color;
-	padding: 0 40px;
-	font-size: 16px;
-	line-height: 46px;
-	border-radius: 5px;
+    display: inline-block;
+    font-weight: 500;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    @include user-select(none);
+    border: 2px solid $theme-color;
+    padding: 0 40px;
+    font-size: 16px;
+    line-height: 46px;
+    border-radius: 5px;
     color: $white;
     cursor: pointer;
     z-index: 5;
     @include transition(0.4s);
     background-color: $theme-color;
     @include box-shadow (0px 15px 40px 0px rgba($theme-color, 0.34));
-    
-    &:hover{
+
+    &:hover {
         background-color: $white;
         color: $theme-color;
         border-color: $theme-color;
     }
-    
-    &.main-btn-2{
+
+    &.main-btn-2 {
         background-color: $white;
         color: $theme-color;
         border-color: $theme-color;
-        &:hover{
+
+        &:hover {
             background-color: $theme-color;
             border-color: $theme-color;
             color: $white;
@@ -158,29 +163,33 @@ p {
 
 /*===== All Section Title Style =====*/
 
-.section_title{
+.section_title {
     text-align: center;
-    & .title{
+
+    & .title {
         font-size: 45px;
         color: $theme-color;
-        
-        @media #{$xs}{
+
+        @media #{$xs} {
             font-size: 34px;
         }
     }
-    & img{
+
+    & img {
         margin-top: 10px;
     }
-    & p{
+
+    & p {
         font-size: 30px;
         line-height: 38px;
         color: $black;
-        
-        @media #{$xs}{
+
+        @media #{$xs} {
             font-size: 24px;
         }
     }
-    & .text{
+
+    & .text {
         font-size: 16px;
         line-height: 26px;
         color: $body-color;
@@ -193,23 +202,23 @@ p {
 
 /*===== All Preloader Style =====*/
 
-.preloader{
+.preloader {
     /* Body Overlay */
     position: fixed;
     top: 0;
     left: 0;
-    display:  table;
+    display: table;
     height: 100%;
-    width:  100%;
+    width: 100%;
     /* Change Background Color */
     background: $white;
     z-index: 99999;
-    
-    & .loader{
+
+    & .loader {
         display: table-cell;
-        vertical-align:  middle;
+        vertical-align: middle;
         text-align: center;
-        
+
         & .ytp-spinner {
             position: absolute;
             left: 50%;
@@ -218,7 +227,7 @@ p {
             margin-left: -32px;
             z-index: 18;
             pointer-events: none;
-            
+
             & .ytp-spinner-container {
                 pointer-events: none;
                 position: absolute;
@@ -229,13 +238,13 @@ p {
                 margin-top: -50%;
                 margin-left: -50%;
                 @include animation(ytp-spinner-linspin 1568.23529647ms linear infinite);
-                
+
                 & .ytp-spinner-rotator {
                     position: absolute;
                     width: 100%;
                     height: 100%;
                     @include animation(ytp-spinner-easespin 5332ms cubic-bezier(0.4, 0.0, 0.2, 1) infinite both);
-                    
+
                     & .ytp-spinner-left {
                         position: absolute;
                         top: 0;
@@ -244,7 +253,7 @@ p {
                         overflow: hidden;
                         right: 50%;
                     }
-                    
+
                     & .ytp-spinner-right {
                         position: absolute;
                         top: 0;
@@ -256,7 +265,7 @@ p {
                 }
             }
         }
-        
+
         & .ytp-spinner-circle {
             box-sizing: border-box;
             position: absolute;
@@ -268,16 +277,16 @@ p {
             border-radius: 50%;
             border-width: 6px;
         }
-        
+
         & .ytp-spinner-left {
             & .ytp-spinner-circle {
                 left: 0;
                 right: -100%;
                 border-right-color: $gray;
-                @include animation( ytp-spinner-left-spin 1333ms cubic-bezier(0.4, 0.0, 0.2, 1) infinite both);
+                @include animation(ytp-spinner-left-spin 1333ms cubic-bezier(0.4, 0.0, 0.2, 1) infinite both);
             }
         }
-        
+
         & .ytp-spinner-right {
             & .ytp-spinner-circle {
                 left: -100%;
@@ -288,8 +297,67 @@ p {
         }
     }
 }
-.choose-language{height: 100vh;display: flex;align-items: center;justify-content: center;text-align: center}
-.choose-language-content{margin-bottom: 15px}/* Preloader Animations*/
+
+/* ===== Choose Language Page Custom Style ===== */
+.choose-language {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #ffffff;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 50%, rgba(255, 244, 235, 1) 100%);
+}
+
+.box-title-language {
+    font-family: "Great Vibes", cursive;
+    font-size: 3rem;
+    color: #d59a57;
+    margin-bottom: 0.5rem;
+    text-align: center;
+    letter-spacing: 2px;
+}
+
+.box-language {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    gap: 24px;
+}
+
+.box-img-language {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1rem;
+}
+
+.language-option {
+    display: flex;
+    height: 50px;
+    width: 120px;
+    justify-items: center;
+    align-items: center;
+    border: 1px solid #ccc;
+    color: ccc;
+    font-family: "Poppins", sans-serif;
+    cursor: pointer;
+    box-shadow: 0 4px 16px rgba(213, 154, 87, 0.08);
+    transition: all 0.2s;
+    justify-content: center;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.language-option:hover,
+.language-option:focus {
+    background: #d59a57;
+    color: #fff;
+    transform: translateY(-3px) scale(1.05);
+    box-shadow: 0 8px 24px rgba(213, 154, 87, 0.18);
+}
+
+
+/* Preloader Animations*/
 
 @-webkit-keyframes ytp-spinner-linspin {
     to {
@@ -307,24 +375,31 @@ p {
     12.5% {
         @include transform(rotate(135deg));
     }
+
     25% {
         @include transform(rotate(270deg));
     }
+
     37.5% {
         @include transform(rotate(405deg));
     }
+
     50% {
         @include transform(rotate(540deg));
     }
+
     62.5% {
         @include transform(rotate(675deg));
     }
+
     75% {
         @include transform(rotate(810deg));
     }
+
     87.5% {
         @include transform(rotate(945deg));
     }
+
     to {
         @include transform(rotate(1080deg));
     }
@@ -334,24 +409,31 @@ p {
     12.5% {
         @include transform(rotate(135deg));
     }
+
     25% {
         @include transform(rotate(270deg));
     }
+
     37.5% {
         @include transform(rotate(405deg));
     }
+
     50% {
         @include transform(rotate(540deg));
     }
+
     62.5% {
         @include transform(rotate(675deg));
     }
+
     75% {
         @include transform(rotate(810deg));
     }
+
     87.5% {
         @include transform(rotate(945deg));
     }
+
     to {
         @include transform(rotate(1080deg));
     }
@@ -361,9 +443,11 @@ p {
     0% {
         @include transform(rotate(130deg));
     }
+
     50% {
         @include transform(rotate(-5deg));
     }
+
     to {
         @include transform(rotate(130deg));
     }
@@ -373,9 +457,11 @@ p {
     0% {
         @include transform(rotate(130deg));
     }
+
     50% {
         @include transform(rotate(-5deg));
     }
+
     to {
         @include transform(rotate(130deg));
     }
@@ -385,9 +471,11 @@ p {
     0% {
         @include transform(rotate(-130deg));
     }
+
     50% {
         @include transform(rotate(5deg));
     }
+
     to {
         @include transform(rotate(-130deg));
     }
@@ -397,15 +485,12 @@ p {
     0% {
         @include transform(rotate(-130deg));
     }
+
     50% {
         @include transform(rotate(5deg));
     }
+
     to {
         @include transform(rotate(-130deg));
     }
 }
-
-
-
-
-
