--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1324,7 +1324,8 @@ p {
 .video-section .top-area p {
   font-size: 20px;
 }
-.video-section .top-area h2, .video-section .top-area p {
+.video-section .top-area h2,
+.video-section .top-area p {
   color: #fff;
   position: relative;
 }
@@ -1492,7 +1493,8 @@ p {
   bottom: 10px;
 }
 
-html:has(.lg-start-zoom), body:has(.lg-start-zoom) {
+html:has(.lg-start-zoom),
+body:has(.lg-start-zoom) {
   overflow: hidden;
 }
 
@@ -1540,6 +1542,93 @@ html:has(.lg-start-zoom), body:has(.lg-start-zoom) {
   opacity: 1;
   right: -15px;
   color: #D59A57;
+}
+
+/*Ablum part css*/
+.ablum_wrapper {
+  background-color: #e7e7e7;
+}
+
+.box-content-ablum {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.box-ablum {
+  background: #fff;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  margin: 16px;
+  transition: box-shadow 0.3s;
+  text-align: center;
+  max-width: 500px;
+  border-radius: 10px;
+}
+
+.box-ablum-image {
+  position: relative;
+  overflow: hidden;
+  box-shadow: 0 8px 32px rgba(213, 154, 87, 0.1);
+  background: #fff;
+  transition: transform 0.5s cubic-bezier(0.4, 1.4, 0.6, 1), box-shadow 0.4s cubic-bezier(0.4, 1.4, 0.6, 1);
+  margin-bottom: 0.5rem;
+}
+
+.box-ablum-image img {
+  display: block;
+  width: 100%;
+  transition: transform 0.3s;
+}
+
+.box-ablum-image:hover {
+  transform: perspective(600px) rotateY(-7deg) scale(1.04);
+  box-shadow: 0 16px 48px rgba(213, 154, 87, 0.18);
+  cursor: pointer;
+}
+
+.box-ablum-image:hover img {
+  transform: scale(1.05);
+}
+
+.box-text-ablum {
+  padding: 1rem 0.5rem 0.5rem 0.5rem;
+  background: transparent;
+}
+.box-text-ablum h3 {
+  color: #D59A57;
+}
+
+.book-open-icon {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(0.85);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s, transform 0.3s, filter 0.3s;
+  z-index: 2;
+  filter: drop-shadow(0 2px 8px rgba(255, 233, 179, 0.6666666667));
+}
+
+.box-ablum-image:hover .book-open-icon {
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1.05) rotate(-3deg);
+  filter: drop-shadow(0 4px 16px rgba(99, 99, 99, 0.5019607843));
+}
+
+.book-open-icon svg {
+  stroke: #e9e9e9;
+  filter: none;
+  background: transparent;
+  border-radius: 50%;
+}
+
+.mfp-ablum {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 /*===========================
