--- a/assets/scss/_gallery.scss
+++ b/assets/scss/_gallery.scss
@@ -1,6 +1,3 @@
-
-
-
 /*===========================
      06.GALLERY css 
 ===========================*/
@@ -11,14 +8,26 @@
     width: 100%;
     height: 60%;
     padding: 150px 0;
-    position: inherit; 
+    position: inherit;
     left: 0;
     top: 0;
     position: relative;
-    h2{font-size: 45px;}
-    p{font-size: 20px;}
-    h2, p{color: #fff; position: relative;}
-    &::before{    
+
+    h2 {
+        font-size: 45px;
+    }
+
+    p {
+        font-size: 20px;
+    }
+
+    h2,
+    p {
+        color: #fff;
+        position: relative;
+    }
+
+    &::before {
         content: "";
         background-color: rgba(61, 36, 36, 0.54);
         width: 100%;
@@ -27,34 +36,58 @@
         left: 0;
         top: 0;
     }
-    .video-btn{
-        a{
+
+    .video-btn {
+        a {
             position: relative;
             margin-top: 15px;
             padding: 10px 8px 10px 10px;
             -webkit-animation: biilogo-pulse 1s infinite;
             animation: biilogo-pulse 1s infinite;
-            &::before{
+
+            &::before {
                 content: '';
                 position: absolute;
                 width: 120%;
                 height: 120%;
                 left: -10%;
                 top: -10%;
-                display: inline-flex;                
-                border-radius: 50%; 
-                border: 1px solid #fff;          
+                display: inline-flex;
+                border-radius: 50%;
+                border: 1px solid #fff;
                 z-index: 1;
             }
         }
-        svg{width: 30px;height: 30px;color: #fff; }
-    } 
+
+        svg {
+            width: 30px;
+            height: 30px;
+            color: #fff;
+        }
+    }
 }
-.fancybox-lock body{overflow: hidden !important;}
-.fancybox-overlay-fixed{position: fixed; top: 0; left: 0; right: 0; bottom: 0; z-index: 999;background: rgba(61, 36, 36, 0.54);}
+
+.fancybox-lock body {
+    overflow: hidden !important;
+}
+
+.fancybox-overlay-fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 999;
+    background: rgba(61, 36, 36, 0.54);
+}
+
 .fancybox-wrap {
-    iframe{width: 100%; height: 100%;}
-    .fancybox-close{    
+    iframe {
+        width: 100%;
+        height: 100%;
+    }
+
+    .fancybox-close {
         position: absolute;
         top: -10px;
         right: -10px;
@@ -65,24 +98,31 @@
         background-image: url(https://phamchuyen.iwedding.info/templates/template7/css/../img/fancybox/fancybox_sprite.png);
     }
 }
+
 .gallery_wrapper {
     margin-top: 30px;
 
-    .item-gallery a{
+    .item-gallery a {
         padding: 5px;
     }
+
     .gallery-container {
         margin: 0 -7.5px;
     }
-    .grid-item{width:33%;
+
+    .grid-item {
+        width: 33%;
         float: left;
-        
+
         overflow: hidden;
+
         a {
             margin: 8px;
             display: block;
             z-index: 10;
-            img{display: block;
+
+            img {
+                display: block;
                 max-width: 100%;
                 height: auto;
             }
@@ -90,29 +130,30 @@
     }
 }
 
-.single_gallery{
+.single_gallery {
     position: relative;
     padding: 3px;
-    
-    & .gallery_image{
+
+    & .gallery_image {
 
         height: 350px;
         overflow: hidden;
 
-        & img{
+        & img {
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
     }
-    & .gallery_content{
+
+    & .gallery_content {
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        
-        &::before{
+
+        &::before {
             position: absolute;
             content: '';
             width: 100%;
@@ -122,29 +163,30 @@
             background-color: rgba($black, 0.85);
             @include transition(0.3s);
         }
-        
-        & .gallery_icon{
+
+        & .gallery_icon {
             position: absolute;
             top: 50%;
             width: 100%;
             text-align: center;
             @include transform(translateY(-50%));
-            
-            & li{
+
+            & li {
                 display: inline-block;
                 margin: 0 5px;
                 @include transition(0.3s);
                 opacity: 0;
                 visibility: hidden;
-                
-                &:first-child{
+
+                &:first-child {
                     @include transform(translateX(-100%));
                 }
-                &:last-child{
+
+                &:last-child {
                     @include transform(translateX(100%));
                 }
-                
-                & a{
+
+                & a {
                     width: 40px;
                     height: 40px;
                     line-height: 36px;
@@ -157,14 +199,15 @@
             }
         }
     }
-    
-    &:hover{
-        & .gallery_content{
-            &::before{
+
+    &:hover {
+        & .gallery_content {
+            &::before {
                 height: 100%;
             }
-            & .gallery_icon{
-                & li{
+
+            & .gallery_icon {
+                & li {
                     @include transform(translateX(0));
                     @include transition-delay(0.3s);
                     opacity: 1;
@@ -175,29 +218,41 @@
     }
 }
 
-.lg-outer .lg-inner{height: calc(100vh - 110px);top: auto;bottom: 10px;}
-html:has(.lg-start-zoom), body:has(.lg-start-zoom){overflow: hidden;}
+.lg-outer .lg-inner {
+    height: calc(100vh - 110px);
+    top: auto;
+    bottom: 10px;
+}
 
-.box-see-more{text-align: center;}
+html:has(.lg-start-zoom),
+body:has(.lg-start-zoom) {
+    overflow: hidden;
+}
+
+.box-see-more {
+    text-align: center;
+}
+
 .box-see-more a {
     transition: all 0.5s;
     cursor: pointer;
     position: relative;
     margin-top: 15px;
-    display: inline-flex;align-items: center;
+    display: inline-flex;
+    align-items: center;
     color: #D59A57;
-  }
-  
-  .box-see-more a span {
+}
+
+.box-see-more a span {
     cursor: pointer;
     display: inline-block;
     position: relative;
     transition: 0.5s;
     font-size: 40px;
     font-family: "Great Vibes";
-  }
-  
-  .box-see-more a i{
+}
+
+.box-see-more a i {
     position: absolute;
     opacity: 0;
     top: 20px;
@@ -207,22 +262,124 @@ html:has(.lg-start-zoom), body:has(.lg-start-zoom){overflow: hidden;}
     background: none;
     color: #D59A57;
     padding-left: 0;
-    top:15px;
-  }
-  
-  .box-see-more a:hover span {
+    top: 15px;
+}
+
+.box-see-more a:hover span {
     padding-right: 25px;
-  }
-  
-  .box-see-more a:hover i:not(.disabled) {
+}
+
+.box-see-more a:hover i:not(.disabled) {
     opacity: 1;
     right: -15px;
     color: #D59A57;
-  }
+}
 
 
+/*Ablum part css*/
+.ablum_wrapper {
+    background-color: #e7e7e7;
+}
+
+.box-content-ablum {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.box-ablum {
+    background: #fff;
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    margin: 16px;
+    transition: box-shadow 0.3s;
+    text-align: center;
+    max-width: 500px;
+    border-radius: 10px;
+}
+
+.box-ablum-image {
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 8px 32px rgba(213, 154, 87, 0.10);
+    background: #fff;
+    transition: transform 0.5s cubic-bezier(.4, 1.4, .6, 1), box-shadow 0.4s cubic-bezier(.4, 1.4, .6, 1);
+    margin-bottom: 0.5rem;
+}
+
+.box-ablum-image img {
+    display: block;
+    width: 100%;
+    transition: transform 0.3s;
+}
+
+.box-ablum-image:hover {
+    transform: perspective(600px) rotateY(-7deg) scale(1.04);
+    box-shadow: 0 16px 48px rgba(213, 154, 87, 0.18);
+    cursor: pointer;
+}
+
+.box-ablum-image:hover img {
+    transform: scale(1.05);
+}
+
+.box-text-ablum {
+    padding: 1rem 0.5rem 0.5rem 0.5rem;
+    background: transparent;
+
+    & h3 {
+        color: #D59A57;
+    }
+}
+
+.book-open-icon {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(0.85);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s, transform 0.3s, filter 0.3s;
+    z-index: 2;
+    filter: drop-shadow(0 2px 8px #ffe9b3aa);
+}
+
+.box-ablum-image:hover .book-open-icon {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1.05) rotate(-3deg);
+    filter: drop-shadow(0 4px 16px #63636380);
+}
+
+.book-open-icon svg {
+    stroke: #e9e9e9;
+    filter: none;
+    background: transparent;
+    border-radius: 50%;
+}
+
+.mfp-ablum {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
 
 
-
-
-
+// .popup-ablum .mfp-close {
+//   color: #fff !important;
+//   background: rgba(80,80,80,0.7) !important;
+//   border-radius: 50%;
+//   opacity: 1 !important;
+//   font-size: 32px !important;
+//   width: 48px;
+//   height: 48px;
+//   right: 16px !important;
+//   top: 16px !important;
+//   text-align: center;
+//   line-height: 48px;
+//   transition: background 0.2s;
+// }
+// .popup-ablum .mfp-close:hover {
+//   background: #fff !important;
+//   color: #333 !important;
+// }
