chinh css ngay17092025

--- a/assets/scss/_gallery.scss
+++ b/assets/scss/_gallery.scss
@@ -278,7 +278,7 @@ body:has(.lg-start-zoom) {
 
 /*Ablum part css*/
 .ablum_wrapper {
-    background-color: #e7e7e7;
+    background-color: #fcf4ec;
 }
 
 .box-content-ablum {
