--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1546,7 +1546,7 @@ body:has(.lg-start-zoom) {
 
 /*Ablum part css*/
 .ablum_wrapper {
-  background-color: #e7e7e7;
+  background-color: #fcf4ec;
 }
 
 .box-content-ablum {
