--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1545,84 +1545,106 @@ body:has(.lg-start-zoom) {
 }
 
 /*Ablum part css*/
-.ablum_wrapper {
+.ablum_area {
   background-color: #fcf4ec;
+  margin-top: 50px;
+  padding-top: 80px;
 }
 
 .box-content-ablum {
   text-align: center;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
+  margin: 0;
 }
 
 .box-ablum {
   background: #fff;
-  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   margin: 16px;
   transition: box-shadow 0.3s;
   text-align: center;
   max-width: 500px;
+  height: 650px;
   border-radius: 10px;
 }
 
-.box-ablum-image {
+.ablum-popup {
+  height: 100%;
+}
+
+.box-ablum-image-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  perspective: 600px;
+}
+.box-ablum-image-container .box-ablum-image {
+  width: 300px;
+  height: 450px;
+  margin-top: 50px;
   position: relative;
-  overflow: hidden;
-  box-shadow: 0 8px 32px rgba(213, 154, 87, 0.1);
-  background: #fff;
-  transition: transform 0.5s cubic-bezier(0.4, 1.4, 0.6, 1), box-shadow 0.4s cubic-bezier(0.4, 1.4, 0.6, 1);
-  margin-bottom: 0.5rem;
-}
-
-.box-ablum-image img {
-  display: block;
-  width: 100%;
-  transition: transform 0.3s;
-}
-
-.box-ablum-image:hover {
-  transform: perspective(600px) rotateY(-7deg) scale(1.04);
-  box-shadow: 0 16px 48px rgba(213, 154, 87, 0.18);
+  transform-style: preserve-3d;
+  transform: rotateY(-30deg);
+  transition: 1s ease;
+  animation: ablumBookInit 1s ease 0s 1;
   cursor: pointer;
 }
-
-.box-ablum-image:hover img {
-  transform: scale(1.05);
+.box-ablum-image-container .box-ablum-image:hover, .box-ablum-image-container .box-ablum-image:focus {
+  transform: rotateY(0deg);
+}
+.box-ablum-image-container .box-ablum-image > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 300px;
+  height: 450px;
+  transform: translateZ(15px);
+  border-radius: 0 5px 5px 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.box-ablum-image-container .box-ablum-image::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 1px;
+  width: 28px;
+  height: 448px;
+  transform: translateX(284px) rotateY(90deg);
+  background: linear-gradient(90deg, #fff 0%, #f9f9f9 5%, #fff 10%, #f9f9f9 15%, #fff 20%, #f9f9f9 25%, #fff 30%, #f9f9f9 35%, #fff 40%, #f9f9f9 45%, #fff 50%, #f9f9f9 55%, #fff 60%, #f9f9f9 65%, #fff 70%, #f9f9f9 75%, #fff 80%, #f9f9f9 85%, #fff 90%, #f9f9f9 95%, #fff 100%);
+}
+.box-ablum-image-container .box-ablum-image::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  width: 300px;
+  height: 450px;
+  transform: translateZ(-15px);
+  background-color: #777777;
+  border-radius: 0 5px 5px 0;
+  box-shadow: -10px 0 30px 10px #666;
+}
+.box-ablum-image-container .box-ablum-image-2::after {
+  background-color: #b57171 !important;
 }
 
+@keyframes ablumBookInit {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(-30deg);
+  }
+}
 .box-text-ablum {
   padding: 1rem 0.5rem 0.5rem 0.5rem;
   background: transparent;
 }
 .box-text-ablum h3 {
   color: #D59A57;
-}
-
-.book-open-icon {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%) scale(0.85);
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.3s, transform 0.3s, filter 0.3s;
-  z-index: 2;
-  filter: drop-shadow(0 2px 8px rgba(255, 233, 179, 0.6666666667));
-}
-
-.box-ablum-image:hover .book-open-icon {
-  opacity: 1;
-  transform: translate(-50%, -50%) scale(1.05) rotate(-3deg);
-  filter: drop-shadow(0 4px 16px rgba(99, 99, 99, 0.5019607843));
-}
-
-.book-open-icon svg {
-  stroke: #e9e9e9;
-  filter: none;
-  background: transparent;
-  border-radius: 50%;
 }
 
 .mfp-ablum {
