--- a/assets/css/bookblock.css
+++ b/assets/css/bookblock.css
@@ -1,7 +1,8 @@
 
 .bb-bookblock {
-	width: 400px;
-	height: 550px;
+	width: 100%;
+    height: 100%;
+	text-align: center;
 	margin: 0 auto;
 	position: relative;
 	z-index: 100;
@@ -49,7 +50,7 @@
 }
 
 .bb-vertical .bb-content {
-	width: 200%;
+	width: 200% !important;
 }
 
 .bb-horizontal .bb-content {
@@ -80,7 +81,6 @@
 
 .bb-overlay, 
 .bb-flipoverlay {
-	background-color: rgba(0, 0, 0, 0.7);
 	position: absolute;
 	top: 0px;
 	left: 0px;
@@ -89,9 +89,6 @@
 	opacity: 0;
 }
 
-.bb-flipoverlay {
-	background-color: rgba(0, 0, 0, 0.2);
-}
 
 .bb-bookblock.bb-vertical > div.bb-page:first-child,
 .bb-bookblock.bb-vertical > div.bb-page:first-child .bb-back {
@@ -106,9 +103,9 @@
 }
 
 /* Content display */
-.bb-content {
+/* .bb-content {
 	background: #fff;
-}
+} */
 
 .bb-vertical .bb-front .bb-content {
 	left: -100%;
