--- a/assets/scss/_coming-soon.scss
+++ b/assets/scss/_coming-soon.scss
@@ -1,42 +1,40 @@
-
-
-
 /*===========================
      04.COMING SOON css 
 ===========================*/
 
-.coming_soon_area{
+.coming_soon_area {
     background-color: $gray;
     position: relative;
     overflow: hidden;
     z-index: 5;
 }
 
-.coming_soon_shape_1{
+.coming_soon_shape_1 {
     position: absolute;
     bottom: -30px;
     left: 0;
     z-index: -1;
-    
-    & img{
-         width: 130px;
-         opacity: 0.31;
+
+    & img {
+        width: 130px;
+        opacity: 0.31;
     }
 }
-.coming_soon_shape_2{
+
+.coming_soon_shape_2 {
     position: absolute;
     top: -30px;
     right: 0;
     z-index: -1;
-    
-    & img{
-         width: 130px;
-         opacity: 0.31;
+
+    & img {
+        width: 130px;
+        opacity: 0.31;
     }
 }
 
-.coming_soon_count{
-    & .single_count{
+.coming_soon_count {
+    & .single_count {
         width: 150px;
         height: 150px;
         text-align: center;
@@ -45,29 +43,32 @@
         margin-right: 10px;
         margin-bottom: 10px;
         position: relative;
-        
-        @media #{$lg}{
+
+        @media #{$lg} {
             width: 120px;
             height: 120px;
         }
-        @media #{$md}{
+
+        @media #{$md} {
             width: 130px;
             height: 130px;
         }
-        @media #{$xs}{
+
+        @media #{$xs} {
             width: 60px;
             height: 60px;
             margin-bottom: 5px;
             margin-right: 5px;
         }
-        @media #{$xs}{
+
+        @media #{$xs} {
             width: 100px;
             height: 100px;
             margin-bottom: 10px;
             margin-right: 10px;
         }
-        
-        &::before{
+
+        &::before {
             position: absolute;
             content: '';
             border-radius: 10px;
@@ -76,49 +77,65 @@
             background-color: rgba($theme-color, 0.20);
             top: 10px;
             left: 10px;
-            
-            @media #{$xs}{
+
+            @media #{$xs} {
                 top: 5px;
                 left: 5px;
             }
-            @media #{$sm}{
+
+            @media #{$sm} {
                 top: 10px;
                 left: 10px;
             }
         }
-        
-        & .count_content{
-            & .count{
+
+        & .count_content {
+            & .count {
                 font-size: 60px;
-                font-family: $font-1;
+
                 color: $white;
                 line-height: 45px;
-                
-                @media #{$lg}{
+
+                // Nếu là tiếng Việt
+                body.lang-vi & {
+                    font-family: $font-1; // Great Vibes, font tiếng Việt
+                }
+
+                // Nếu là tiếng Trung
+                body.lang-zh & {
+                    font-family: $font-zh; // font hỗ trợ tiếng Trung, ví dụ 'Noto Sans SC'
+                }
+
+                @media #{$lg} {
                     font-size: 50px;
                 }
-                @media #{$xs}{
+
+                @media #{$xs} {
                     font-size: 30px;
                     line-height: 30px;
                 }
-                @media #{$sm}{
+
+                @media #{$sm} {
                     font-size: 46px;
                     line-height: 50px;
                 }
             }
-            & .times{
+
+            & .times {
                 font-size: 25px;
                 color: $white;
                 line-height: 45px;
-                
-                @media #{$lg}{
+
+                @media #{$lg} {
                     font-size: 22px;
                 }
-                @media #{$xs}{
+
+                @media #{$xs} {
                     font-size: 12px;
                     line-height: 20px;
                 }
-                @media #{$sm}{
+
+                @media #{$sm} {
                     font-size: 18px;
                     line-height: 30px;
                 }
@@ -126,10 +143,3 @@
         }
     }
 }
-
-
-
-
-
-
-
