--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,15 @@
+@font-face {
+  font-family: 'Ma Shan Zheng';
+  src: url('./fonts/MaShanZheng-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 // Font Family
 $font-1: 'Great Vibes';
 $font-2: 'Poppins', sans-serif;
+
+$font-zh: 'Noto Sans SC', 'Microsoft Yahei', sans-serif;
 
 
 // Colors ---------------
