--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,6 +1,3 @@
-
-
-
 /*===========================
      02.HEADER css 
 ===========================*/
@@ -20,7 +17,8 @@
 }
 
 
-.sticky,.header_navbar_gallery {
+.sticky,
+.header_navbar_gallery {
     position: fixed;
     z-index: 99;
     background-color: $white;
@@ -43,14 +41,14 @@
 .navbar-brand {
     padding: 0;
 
-    & img{
+    & img {
         width: 85px;
     }
 }
 
 .navbar-brand.navbar-brand-language {
-        margin-left: 50px;
-    }
+    margin-left: 50px;
+}
 
 
 .navbar-toggler {
@@ -111,7 +109,9 @@
 }
 
 
-.navbar-nav {align-items: center;
+.navbar-nav {
+    align-items: center;
+
     & .nav-item {
         margin-left: 45px;
         position: relative;
@@ -129,19 +129,39 @@
         }
 
         & a {
-            font-size: 16px;
+
             font-weight: 400;
             color: $white;
             @include transition(0.3s);
             padding: 10px 0;
             position: relative;
-            font-family: $font-2;
+
+            // Nếu là tiếng Việt
+            body.lang-vi & {
+                font-family: $font-2; // Great Vibes, font tiếng Việt
+                font-size: 16px;
+            }
+
+            // Nếu là tiếng Trung
+            body.lang-zh & {
+                font-family: $font-zh-2; // font hỗ trợ tiếng Trung, ví dụ 'Noto Sans SC'
+                font-size: 18px;
+            }
+
             position: relative;
             cursor: pointer;
-           
-            &.changelang{
-                background: url(../images/china.png) no-repeat; width: 30px; height: 30px; background-size: 30px; display: flex; cursor: pointer;
-                &.lang-vn{background-image: url(../images/vietnam.png);}
+
+            &.changelang {
+                background: url(../images/china.png) no-repeat;
+                width: 30px;
+                height: 30px;
+                background-size: 30px;
+                display: flex;
+                cursor: pointer;
+
+                &.lang-vn {
+                    background-image: url(../images/vietnam.png);
+                }
             }
 
             @media #{$md} {
@@ -159,18 +179,18 @@
 
         &.active,
         &:hover {
-            & >a {
-                & span{
+            &>a {
+                & span {
                     opacity: 1;
                     visibility: visible;
                     width: 60%;
-                    
-                    &::before{
+
+                    &::before {
                         width: 20%;
                     }
-                    
-                    &::after{
-                        width: 15%; 
+
+                    &::after {
+                        width: 15%;
                     }
                 }
             }
@@ -281,20 +301,21 @@
 }
 
 
-.sticky, .header_navbar_gallery{
+.sticky,
+.header_navbar_gallery {
     & .navbar-toggler {
         & .toggler-icon {
             background-color: $black;
         }
     }
-    
-        
+
+
     & .navbar-nav {
         & .nav-item {
             & a {
                 color: $black;
             }
-            
+
             &.active,
             &:hover {
                 &>a {
@@ -309,22 +330,21 @@
 /*===== SLIDER =====*/
 
 
-.header_slider{
-    
-}
+.header_slider {}
 
-.single_slider{
+.single_slider {
     height: 800px;
     position: relative;
-    
-    @media #{$desktop}{
+
+    @media #{$desktop} {
         height: 900px;
     }
-    @media #{$xs}{
+
+    @media #{$xs} {
         height: 600px;
     }
 
-    &::before{
+    &::before {
         position: absolute;
         content: '';
         background-color: rgba($black-soft, 0.54);
@@ -334,99 +354,168 @@
         top: 0;
     }
 }
-.slider-fixed{    
+
+.slider-fixed {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
 }
-.slider_content{
+
+.slider_content {
     padding-top: 80px;
-    
-    & .slider_sub_title{
-        font-size: 30px;
-        font-family: $font-2;
-        font-weight: 600;
+
+    & .slider_sub_title {
+
         color: $white;
-        
-        @media #{$md}{
-            font-size: 24px;
+
+        // Nếu là tiếng Việt
+        body.lang-vi & {
+            font-family: $font-2; // Great Vibes, font tiếng Việt
+            font-size: 30px;
+            font-weight: 600;
         }
-        @media #{$xs}{
-            font-size: 18px;
+
+        // Nếu là tiếng Trung
+        body.lang-zh & {
+            font-family: $font-zh-2; // font hỗ trợ tiếng Trung, ví dụ 'Noto Sans SC'
+            font-size: 60px;
+            font-weight: 100;
+        }
+
+        @media #{$md} {
+            body.lang-vi & {
+                font-size: 24px;
+            }
+
+            body.lang-zh & {
+                font-size: 45px;
+            }
+        }
+
+        @media #{$xs} {
+            body.lang-vi & {
+                font-size: 18px;
+            }
+
+            body.lang-zh & {
+                font-size: 30px;
+            }
+
         }
     }
-    & .slider_title{
+
+    & .slider_title {
         font-size: 112px;
+
+        // Nếu là tiếng Trung
+        body.lang-zh & {
+            font-weight: 100;
+        }
+
         color: $white;
         margin-top: 15px;
-        
-        @media #{$lg}{
+
+        @media #{$lg} {
             font-size: 102px;
         }
-        @media #{$md}{
+
+        @media #{$md} {
             font-size: 74px;
         }
-        @media #{$xs}{
+
+        @media #{$xs} {
             font-size: 38px;
         }
-        @media #{$sm}{
+
+        @media #{$sm} {
             font-size: 60px;
         }
-        
-        & span{
+
+        & span {
             display: contents;
             color: $theme-color;
         }
     }
-    & .location{
-        font-size: 30px;
-        font-weight: 600;
+
+    & .location {
+
         color: $white;
         margin-top: 35px;
-        
-        @media #{$md}{
-            font-size: 24px;
+
+        // Nếu là tiếng Việt
+        body.lang-vi & {
+            font-family: $font-2; // Great Vibes, font tiếng Việt
+            font-size: 30px;
+            font-weight: 600;
         }
-        @media #{$xs}{
-            font-size: 18px;
+
+        // Nếu là tiếng Trung
+        body.lang-zh & {
+            font-family: $font-zh-2; // font hỗ trợ tiếng Trung, ví dụ 'Noto Sans SC'
+            font-size: 60px;
+            font-weight: 100;
+        }
+
+        @media #{$md} {
+            body.lang-vi & {
+                font-size: 24px; // Nếu là tiếng Việt
+            }
+
+            // Nếu là tiếng Trung
+            body.lang-zh & {
+                font-size: 35px; // Nếu là tiếng Việt
+            }
+        }
+
+        @media #{$xs} {
+            body.lang-vi & {
+                font-size: 18px; // Nếu là tiếng Việt
+            }
+
+            // Nếu là tiếng Trung
+            body.lang-zh & {
+                font-size: 24px; // Nếu là tiếng Việt
+            }
         }
     }
-    & p{
+
+    & p {
         font-size: 25px;
         color: $white;
         margin-top: 30px;
-        
-        @media #{$md}{
+
+        @media #{$md} {
             font-size: 20px;
         }
-        @media #{$xs}{
+
+        @media #{$xs} {
             font-size: 16px;
         }
-        
-        & img{
+
+        & img {
             display: inline-block;
-            
-            @media #{$xs}{
+
+            @media #{$xs} {
                 width: 40px;
             }
         }
     }
 }
 
-.slider-active{
-    & .slick-dots{
+.slider-active {
+    & .slick-dots {
         position: absolute;
         left: 50%;
         bottom: 50px;
         @include transform(translateX(-50%));
-        
-        & li{
+
+        & li {
             display: inline-block;
             margin: 0 3px;
-            
-            & button{
+
+            & button {
                 width: 15px;
                 height: 15px;
                 background: none;
@@ -436,17 +525,17 @@
                 @include transition(0.3s);
                 @include transform(translateX(-50%));
             }
-            
-            &.slick-active{
-                & button{
+
+            &.slick-active {
+                & button {
                     background-color: $white;
                     border-color: $border-color;
                 }
             }
         }
     }
-    
-    & .slick-arrow{
+
+    & .slick-arrow {
         position: absolute;
         top: 50%;
         @include transform(translateY(-50%));
@@ -454,8 +543,8 @@
         z-index: 9;
         @include transition(0.3s);
         opacity: 0;
-        
-        & i{
+
+        & i {
             width: 50px;
             height: 50px;
             line-height: 46px;
@@ -467,34 +556,34 @@
             cursor: pointer;
             @include transition(0.3s);
         }
-        
-        &:hover{
-            & i{
+
+        &:hover {
+            & i {
                 color: $theme-color;
                 border-color: $theme-color;
             }
         }
-        
-        &.next{
+
+        &.next {
             right: 0;
             left: auto;
         }
     }
-    
-    &:hover{
-        & .slick-arrow{
+
+    &:hover {
+        & .slick-arrow {
             left: 30px;
             opacity: 1;
-            
-            @media #{$desktop}{
+
+            @media #{$desktop} {
                 left: 130px;
             }
-            
-            &.next{
+
+            &.next {
                 left: auto;
                 right: 30px;
-                
-                @media #{$desktop}{
+
+                @media #{$desktop} {
                     right: 130px;
                 }
             }
@@ -505,6 +594,3 @@
 .header_navbar_gallery {
     color: black;
 }
-
-
-
