--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'ChineseFont1';
-  src: url('../fonts/ChineseFont_1.ttf') format('truetype');
+  src: url('../fonts/ChineseFont_1.woff') format('woff2');
 }
 
 @font-face {
-  font-family: 'ChineseFont_2';
-  src: url('../fonts/ChineseFont_1.ttf') format('truetype');
+  font-family: 'ChineseFont2';
+  src: url('../fonts/ChineseFont_2.woff') format('woff2');
   font-size: normal;
   font-weight: 100;
 }
@@ -15,7 +15,7 @@ $font-1: 'Great Vibes';
 $font-2: 'Poppins', sans-serif;
 
 $font-zh-1: 'ChineseFont1';
-$font-zh-2: 'ChineseFont_2';
+$font-zh-2: 'ChineseFont2';
 //$font-zh-2: 'Noto Sans SC', 'Microsoft Yahei', sans-serif;
 
 
