--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -358,7 +358,7 @@ p {
     align-items: center;
     border: 1px solid #ccc;
     color: ccc;
-    font-family: "Poppins", sans-serif;
+    font-family: "ChineseFont2";
     cursor: pointer;
     box-shadow: 0 4px 16px rgba(213, 154, 87, 0.08);
     transition: all 0.2s;
@@ -366,6 +366,14 @@ p {
     font-size: 16px;
     font-weight: bold;
 }
+
+
+.language-option.fontChina {
+    font-size: 20px;
+    font-weight: 100;
+}
+
+
 
 .language-option:hover,
 .language-option:focus {
