--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -13,7 +13,7 @@
     width: 100%;
     z-index: 99;
     @include transition(0.3s);
-    background-color: rgba($white, 0.07);
+    //background-color: rgba($white, 0.07);
 }
 
 
